--- a/App/app.html
+++ b/App/app.html
@@ -31,11 +31,11 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="input.html"
-                                >Create New Room</a
+                                >Enter Dimensions</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Scan a New Room</a>
+                            <a class="nav-link" href="#">Scan New Room</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Choose Ready Rooms</a>
