--- a/App/input.html
+++ b/App/input.html
@@ -31,11 +31,11 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="input.html"
-                                >Create New Room</a
+                                >Enter Dimensions</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Scan a New Room</a>
+                            <a class="nav-link" href="#">Scan New Room</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Choose Ready Rooms</a>
@@ -46,19 +46,17 @@
         </nav>
 
         <form id="input" action="app.html" method="GET">
-            <div>
-                <label for="columns">Columns: </label>
-                <input type="number" name="columns" min="1" />
-            </div>
-
-            <div>
-                <label for="rows">Rows: </label>
-                <input type="number" name="rows" min="1" />
-            </div>
-
-            <div>
-                <button type="submit">Generate Grid</button>
-            </div>
+            <label for="columns">Columns: </label>
+            <input type="number" name="columns" min="1" />
+            <label for="rows">Rows: </label>
+            <input type="number" name="rows" min="1" />
+            <button type="submit">Generate Grid</button>
         </form>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
