--- a/App/app.html
+++ b/App/app.html
@@ -30,9 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="input.html"
-                                >Enter Dimensions</a
-                            >
+                            <a class="nav-link" href="input.html">Input Data</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Scan New Room</a>
