--- a/App/app.html
+++ b/App/app.html
@@ -85,7 +85,14 @@
             <button id="output-json">Output as JSON</button>
         </div>
 
-        <script src="app.js"></script>
+        <!-- <script src="app.js"></script> -->
+        <script src="gridModifier.js"></script>
+        <script src="zoomHandler.js"></script>
+        <script src="utils.js"></script>
+        <script src="modeHandler.js"></script>
+        <script src="clickHandler.js"></script>
+        <script src="gridEventHandler.js"></script>
+        <script src="output.js"></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
