--- a/App/input.html
+++ b/App/input.html
@@ -66,26 +66,7 @@
             <button id="saveData">Generate Grid</button>
         </div>
 
-        <script>
-            document
-                .getElementById("saveData")
-                .addEventListener("click", function () {
-                    const jsonData = document.getElementById("jsonData").value;
-                    try {
-                        // Parse to ensure valid JSON
-                        const parsedData = JSON.parse(jsonData);
-                        // Save to localStorage
-                        localStorage.setItem(
-                            "gridData",
-                            JSON.stringify(parsedData)
-                        );
-                        // Redirect to app.html
-                        window.location.href = "app.html";
-                    } catch (error) {
-                        alert("Invalid JSON data.");
-                    }
-                });
-        </script>
+        <script src="input.js"></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
