Added "Send JSON" button to send the produced JSON grid data to the Python serv

--- a/App/app.html
+++ b/App/app.html
@@ -86,6 +86,10 @@
         <div id="output-div">
             <button id="output-json">Output as JSON</button>
         </div>
+        
+        <div id="send-div">
+            <button id="send-json">Send JSON</button>
+        </div>
 
         <script src="app.js"></script>
 
