Added Grid JSON Object

--- a/App/app.html
+++ b/App/app.html
@@ -88,7 +88,7 @@
         </div>
         
         <div id="send-div">
-            <button id="send-json">Send JSON</button>
+            <button id="send-json">Send JSON to Server</button>
         </div>
 
         <script src="app.js"></script>
