--- a/App/app.html
+++ b/App/app.html
@@ -85,6 +85,10 @@
             <button id="output-json">Output as JSON</button>
         </div>
 
+        <div id="send-div">
+            <button id="send-json">Send JSON to Server</button>
+        </div>
+
         <!-- <script src="app.js"></script> -->
         <script src="gridModifier.js"></script>
         <script src="zoomHandler.js"></script>
