--- a/App/app.html
+++ b/App/app.html
@@ -81,12 +81,8 @@
 
         <div class="grid-container"></div>
 
-        <div id="output-div">
-            <button id="output-json">Output as JSON</button>
-        </div>
-
         <div id="send-div">
-            <button id="send-json">Send JSON to Server</button>
+            <button id="send-json">Output as JSON</button>
         </div>
 
         <!-- <script src="app.js"></script> -->
