--- a/App/input.html
+++ b/App/input.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="color-scheme" content="light only" />
         <title>SARA</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -33,9 +34,6 @@
                             <a class="nav-link" href="input.html">Input Data</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Scan New Room</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#">Choose Ready Rooms</a>
                         </li>
                     </ul>
@@ -45,7 +43,7 @@
 
         <div id="input">
             <h2>Dimensions</h2>
-            <form action="app.html" method="GET">
+            <form action="index.html" method="GET">
                 <div id="dimensions">
                     <label for="columns">Columns:</label>
                     <input type="number" name="columns" min="1" />
@@ -55,15 +53,9 @@
                 </div>
             </form>
 
-            <h2>JSON</h2>
-            <textarea
-                id="jsonData"
-                rows="10"
-                cols="40"
-                placeholder="Paste JSON data here"
-            ></textarea>
-            <br />
-            <button id="saveData">Generate Grid</button>
+            <h2>Upload Image</h2>
+            <input type="file" id="uploadData" />
+            <input type="submit" />
         </div>
 
         <script src="input.js"></script>
