--- a/App/input.html
+++ b/App/input.html
@@ -54,8 +54,8 @@
             </form>
 
             <h2>Upload Image</h2>
-            <input type="file" id="uploadData" />
-            <input type="submit" />
+            <input type="file" id="fileInput" />
+            <button id="uploadData">Generate Grid</button>
         </div>
 
         <script src="input.js"></script>
