--- a/App/input.html
+++ b/App/input.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="color-scheme" content="light only" />
         <title>SARA</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -30,12 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="input.html"
-                                >Enter Dimensions</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Scan New Room</a>
+                            <a class="nav-link" href="input.html">Input Data</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Choose Ready Rooms</a>
@@ -45,13 +41,24 @@
             </div>
         </nav>
 
-        <form id="input" action="app.html" method="GET">
-            <label for="columns">Columns: </label>
-            <input type="number" name="columns" min="1" />
-            <label for="rows">Rows: </label>
-            <input type="number" name="rows" min="1" />
-            <button type="submit">Generate Grid</button>
-        </form>
+        <div id="input">
+            <h2>Dimensions</h2>
+            <form action="index.html" method="GET">
+                <div id="dimensions">
+                    <label for="columns">Columns:</label>
+                    <input type="number" name="columns" min="1" />
+                    <label for="rows">Rows:</label>
+                    <input type="number" name="rows" min="1" />
+                    <button type="submit">Generate Grid</button>
+                </div>
+            </form>
+
+            <h2>Upload PGM</h2>
+            <input type="file" id="fileInput" />
+            <button id="uploadData">Generate Grid</button>
+        </div>
+
+        <script src="input.js"></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
