--- a/App/app.html
+++ b/App/app.html
@@ -30,7 +30,9 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="input.html">Input Data</a>
+                            <a class="nav-link" href="input.html"
+                                >Enter Dimensions</a
+                            >
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Scan New Room</a>
@@ -81,22 +83,15 @@
 
         <div class="grid-container"></div>
 
-        <div id="send-div">
-            <button id="send-json">Output as JSON</button>
+        <div id="output-div">
+            <button id="output-json">Output as JSON</button>
         </div>
         
         <div id="send-div">
             <button id="send-json">Send JSON to Server</button>
         </div>
 
-        <!-- <script src="app.js"></script> -->
-        <script src="gridModifier.js"></script>
-        <script src="zoomHandler.js"></script>
-        <script src="utils.js"></script>
-        <script src="modeHandler.js"></script>
-        <script src="clickHandler.js"></script>
-        <script src="gridEventHandler.js"></script>
-        <script src="output.js"></script>
+        <script src="app.js"></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
