--- a/App/layouts.html
+++ b/App/layouts.html
@@ -67,43 +67,15 @@
             </div>
         </nav>
 
-        <div id="input">
-            <div id="input-dimensions">
-                <h2>Dimensions</h2>
-                <form action="index.html" method="GET">
-                    <div id="dimensions">
-                        <label for="columns">Columns:</label>
-                        <input
-                            type="number"
-                            name="columns"
-                            min="1"
-                            id="columns"
-                        />
-                        <label for="rows">Rows:</label>
-                        <input type="number" name="rows" min="1" id="rows" />
-                        <button type="submit">Generate Grid</button>
-                    </div>
-                </form>
-            </div>
-
-            <div id="input-pgm">
-                <h2>PGM</h2>
-                <input type="file" id="fileInput" />
-                <button id="uploadData">Generate Grid</button>
-            </div>
-
-            <div id="input-json">
-                <h2>JSON</h2>
-                <textarea
-                    id="jsonData"
-                    rows="10"
-                    placeholder="Paste JSON data here"
-                ></textarea>
-                <button id="saveData">Generate Grid</button>
-            </div>
+        <div id="saved-layouts">
+            <h2>Saved Layouts</h2>
         </div>
 
-        <script src="input.js"></script>
+        <div id="premade-templates">
+            <h2>Premade Templates</h2>
+        </div>
+
+        <script src="layouts.js"></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
